tiffdatadir = $(wprefsdir)/tiff

tiffdata_DATA = \
	advancetonewworkspace.tiff \
	animations.tiff \
	appearance.tiff \
	clip.tiff \
	configs.tiff \
	cycleworkspaces.tiff \
	dock.tiff \
	dontlinkworkspaces.tiff \
	ergonomic.tiff \
	expert.tiff \
	fonts.tiff \
	iconprefs.tiff \
	keyboard.tiff \
	keyboardprefs.tiff \
	keyshortcuts.tiff \
	menualign1.tiff \
	menualign2.tiff \
	menuprefs.tiff \
	menus.tiff \
	minimouseleft.tiff \
	minimousemiddle.tiff \
	minimouseright.tiff \
	moreanim.tiff \
	mousesettings.tiff \
	mousespeed.tiff \
	newstyle.tiff \
	nonopaque.tiff \
	oldstyle.tiff \
	opaque.tiff \
	paths.tiff \
	sound.tiff \
	speed0.tiff \
	speed0s.tiff \
	speed1.tiff \
	speed1s.tiff \
	speed2.tiff \
	speed2s.tiff \
	speed3.tiff \
	speed3s.tiff \
	speed4.tiff \
	speed4s.tiff \
	timer0.tiff \
	timer0s.tiff \
	timer1.tiff \
	timer1s.tiff \
	timer2.tiff \
	timer2s.tiff \
	timer3.tiff \
	timer3s.tiff \
	timer4.tiff \
	timer4s.tiff \
	timer5.tiff \
	timer5s.tiff \
	whandling.tiff \
	windowfocus.tiff \
	workspace.tiff \
	xis.tiff 

EXTRA_DIST = $(tiffdata_DATA)
