
defsdatadir = $(pkgdatadir)/Icons


defsdata_DATA = \
	BitchX.tiff\
	DefaultAppIcon.tiff\
	Ftp.png\
	GNUstep.tiff\
	GNUstep3D.tiff\
	GNUstepGlow.tiff\
	GNUterm.tiff\
	GreenWilber.png\
	ICQ.png\
	Mozilla.png\
	Netscape.png\
	Pen.png\
	Pencil.png\
	Real.png\
	Shell.png\
	Speaker.png\
	Terminal.tiff\
	TerminalGNUstep.tiff\
	TerminalLinux.tiff\
	XChat.png\
	clip.tiff\
	defaultAppIcon.tiff\
	defaultterm.tiff\
	draw.tiff\
	linuxterm.tiff\
	mixer.tiff\
	notepad.tiff\
	pdf.tiff\
	ps.tiff\
	real.tiff\
	sgiterm.tiff\
	sound.tiff\
	staroffice2.tiff\
	timer.tiff\
	wilber.tiff\
	write.tiff\
	xdvi.tiff\
	xv.tiff\
	BitchX.xpm\
	GNUstep.xpm\
	GNUstep3D.xpm\
	GNUstepGlow.xpm\
	GNUterm.xpm\
	Terminal.xpm\
	TerminalGNUstep.xpm\
	TerminalLinux.xpm\
	clip.xpm\
	defaultAppIcon.xpm\
	defaultterm.xpm\
	draw.xpm\
	linuxterm.xpm\
	mixer.xpm\
	notepad.xpm\
	pdf.xpm\
	ps.xpm\
	real.xpm\
	sgiterm.xpm\
	sound.xpm\
	staroffice2.xpm\
	timer.xpm\
	wilber.xpm\
	write.xpm\
	xdvi.xpm\
	xv.xpm


EXTRA_DIST = $(defsdata_DATA) 

