defsdatadir = $(pkgdatadir)/Styles

defsdata_DATA = \
	Autumn\
	Black\
	Blue\
	BlueAluminum\
	BlueDawn\
	BlueishGreen\
	Brown\
	Chumbo\
	Copper\
	DarkBlue\
	DarkRed\
	Fire\
	Food\
	Golden\
	Green\
	GreyBlue\
	Gtk\
	LightBlue\
	Pastel\
	Pink\
	Pumpkin\
	Purple\
	Red\
	RednBlue\
	ShinyBrown\
	Summer\
	Traditional\
	VioletBlue

EXTRA_DIST = $(defsdata_DATA) 
