
prefsdatadir = $(pkgdatadir)/Styles

prefsdata_DATA =\
	Autumn.style\
	Black.style\
	BlackTexture.style\
	Blue.style\
	BlueDawn.style\
	BlueishGreen.style\
	Brown.style\
	Chumbo.style\
	Copper.style\
	DarkBlue.style\
	DarkRed.style\
	Fire.style\
	Food.style\
	Golden.style\
	Green.style\
	GreyBlue.style\
	Gtk.style\
	LightBlue.style\
	Pastel.style\
	Pink.style\
	Pumpkin.style\
	Purple.style\
	Red.style\
	RednBlue.style\
	Summer.style\
	Traditional.style\
	VioletBlue.style

EXTRA_DIST = $(prefsdata_DATA)


